--- a/RecipeApp/app/src/main/res/layout/activity_main_recipe_row_item.xml
+++ b/RecipeApp/app/src/main/res/layout/activity_main_recipe_row_item.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/activity_recipe_details_imageView"
                 android:layout_width="match_parent"
                 android:layout_height="176dp"
                 android:adjustViewBounds="false"
