--- a/RecipeApp/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipeApp/app/src/main/res/layout/activity_recipe_details.xml
@@ -7,189 +7,207 @@
     android:background="@color/white"
     tools:context=".RecipeDetails">
 
-    <ImageView
-        android:id="@+id/image_title"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        tools:ignore="SpeakableTextPresentCheck">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="409dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="-16dp"
-        app:cardCornerRadius="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_title" >
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="0dp"
+            <ImageView
+                android:id="@+id/image_title"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="409dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginTop="-16dp"
+                app:cardCornerRadius="16dp">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/linearLayout"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_weight="0"
-                        android:scaleType="fitStart"
-                        android:src="@drawable/ic_thumbs_up"
-                        app:tint="@color/primary" />
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imageView2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_weight="0"
+                                android:scaleType="fitStart"
+                                android:src="@drawable/ic_thumbs_up"
+                                app:tint="@color/primary" />
+
+                            <TextView
+                                android:id="@+id/activity_recipe_details_likes_label"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="2.5dp"
+                                android:layout_marginEnd="0dp"
+                                android:fontFamily="@font/montserrat_semi_bold"
+                                android:textAlignment="center"
+                                android:textColor="@color/lightgrey"
+                                tools:text="256 likes" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imageView3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_weight="0"
+                                android:scaleType="fitStart"
+                                android:src="@drawable/ic_clock"
+                                app:tint="@color/primary" />
+
+                            <TextView
+                                android:id="@+id/activity_recipe_details_time_label"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="2.5dp"
+                                android:layout_marginEnd="0dp"
+                                android:fontFamily="@font/montserrat_semi_bold"
+                                android:textColor="@color/lightgrey"
+                                tools:text="30 minutes" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imageView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_weight="0"
+                                android:scaleType="fitStart"
+                                android:src="@drawable/ic_heart"
+                                app:tint="@color/primary" />
+
+                            <TextView
+                                android:id="@+id/activity_recipe_details_health_label"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="2.5dp"
+                                android:layout_marginEnd="0dp"
+                                android:fontFamily="@font/montserrat_semi_bold"
+                                android:textColor="@color/lightgrey"
+                                tools:text="30 health" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
 
                     <TextView
-                        android:id="@+id/activity_recipe_details_likes_label"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/activity_recipe_details_title"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="2.5dp"
-                        android:layout_marginEnd="0dp"
-                        android:fontFamily="@font/montserrat_semi_bold"
-                        android:textAlignment="center"
-                        android:textColor="@color/lightgrey"
-                        tools:text="256 likes" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_weight="0"
-                        android:scaleType="fitStart"
-                        android:src="@drawable/ic_clock"
-                        app:tint="@color/primary" />
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/montserrat_bold"
+                        android:text="TextView"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
                     <TextView
-                        android:id="@+id/activity_recipe_details_time_label"
+                        android:id="@+id/activity_recipe_details_ingridients_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="2.5dp"
-                        android:layout_marginEnd="0dp"
-                        android:fontFamily="@font/montserrat_semi_bold"
-                        android:textColor="@color/lightgrey"
-                        tools:text="30 minutes" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_weight="0"
-                        android:scaleType="fitStart"
-                        android:src="@drawable/ic_heart"
-                        app:tint="@color/primary" />
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="32dp"
+                        android:fontFamily="@font/montserrat_bold"
+                        android:text="@string/ingredients"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_title" />
 
                     <TextView
-                        android:id="@+id/activity_recipe_details_health_label"
+                        android:id="@+id/activity_recipe_details_servings_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="2.5dp"
-                        android:layout_marginEnd="0dp"
-                        android:fontFamily="@font/montserrat_semi_bold"
-                        android:textColor="@color/lightgrey"
-                        tools:text="30 health" />
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="32dp"
+                        android:fontFamily="@font/montserrat_medium"
+                        android:text="TextView"
+                        android:textColor="@color/darkgrey"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toEndOf="@+id/activity_recipe_details_ingridients_label"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_title" />
 
-                </LinearLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/activity_recipe_details_ingredients_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        app:layout_constraintBottom_toTopOf="@+id/button_open_recipe"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_servings_label" />
 
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/button_open_recipe"
+                        android:layout_width="0dp"
+                        android:layout_height="52dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="@font/montserrat_medium"
+                        android:text="Open Recipe"
+                        app:cornerRadius="16dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <Button
-                android:id="@+id/button_open_recipe"
-                android:layout_width="0dp"
-                android:layout_height="52dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/montserrat_medium"
-                android:text="Open Recipe"
-                app:cornerRadius="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/activity_recipe_details_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-            <TextView
-                android:id="@+id/activity_recipe_details_ingridients_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="@string/ingredients"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_title" />
-
-            <TextView
-                android:id="@+id/activity_recipe_details_servings_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:fontFamily="@font/montserrat_medium"
-                android:text="TextView"
-                android:textColor="@color/darkgrey"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/activity_recipe_details_ingridients_label"
-                app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_title" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
